Fixed stuff wrapping badly

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -141,6 +141,10 @@ b {
 	filter: brightness(50%);
 }
 
+.no-wrap {
+	white-space: nowrap;
+}
+
 
 
 /* Code */
